--- a/app/src/main/res/layout/item_training_diary.xml
+++ b/app/src/main/res/layout/item_training_diary.xml
@@ -2,18 +2,18 @@
 <com.yuqinyidev.android.framework.widget.autolayout.AutoCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="550px"
-    android:layout_marginBottom="15px"
-    android:layout_marginRight="15px">
+    android:layout_height="50dp"
+    android:layout_marginBottom="15dp"
+    android:layout_marginRight="15dp">
 
     <TextView
         android:id="@+id/txv_training_dairy_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_marginLeft="15px"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
         android:text="SS"
         android:textColor="@color/colorPrimary"
-        android:textSize="40px" />
+        android:textSize="36sp" />
 
 </com.yuqinyidev.android.framework.widget.autolayout.AutoCardView>
