--- a/app/src/main/res/layout/item_training_diary.xml
+++ b/app/src/main/res/layout/item_training_diary.xml
@@ -2,7 +2,7 @@
 <com.yuqinyidev.android.framework.widget.autolayout.AutoCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="15dp"
     android:layout_marginRight="15dp">
 
