--- a/app/src/main/res/layout/act_training_diary_save.xml
+++ b/app/src/main/res/layout/act_training_diary_save.xml
@@ -60,6 +60,14 @@
                 android:text="点击选择地址"
                 android:textSize="20sp" />
 
+            <TextView
+                android:id="@+id/txv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="点击选择日期"
+                android:textSize="20sp" />
+
         </LinearLayout>
 
         <android.support.design.widget.FloatingActionButton
