--- a/app/src/main/res/layout/act_training_diary_save.xml
+++ b/app/src/main/res/layout/act_training_diary_save.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include layout="@layout/include_title" />
+
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
@@ -17,56 +19,108 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/edt_td_id"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <EditText
-                android:id="@+id/edt_td_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="名字" />
-
-            <EditText
-                android:id="@+id/edt_td_date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="日期" />
-
-            <EditText
-                android:id="@+id/edt_td_level"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="级别" />
-
-            <EditText
-                android:id="@+id/edt_td_group_no"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="组别" />
-
-            <EditText
-                android:id="@+id/edt_td_count"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="次数" />
-
             <TextView
-                android:id="@+id/txv_address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="点击选择地址"
-                android:textSize="20sp" />
+                android:id="@+id/txv_td_up_rule"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="10dp"
+                android:textSize="30sp" />
 
-            <TextView
-                android:id="@+id/txv_date"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="点击选择日期"
-                android:textSize="20sp" />
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="日期："
+                    android:textSize="30sp" />
+
+                <TextView
+                    android:id="@+id/txv_td_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="点击选择日期"
+                    android:textSize="30sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="项目："
+                    android:textSize="30sp" />
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/txv_td_program"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="点击选择训练项目"
+                        android:textSize="30sp" />
+
+                    <TextView
+                        android:id="@+id/txv_td_level"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="点击选择训练级别"
+                        android:textSize="30sp" />
+
+                    <TextView
+                        android:id="@+id/txv_td_group"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="点击选择训练组"
+                        android:textSize="30sp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="次数："
+                    android:textSize="30sp" />
+
+                <EditText
+                    android:id="@+id/edt_td_count"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="点击输入训练次数"
+                    android:lines="1"
+                    android:maxLines="1"
+                    android:minLines="1"
+                    android:textSize="30sp" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
