--- a/app/src/main/res/layout/item_training_diary.xml
+++ b/app/src/main/res/layout/item_training_diary.xml
@@ -20,7 +20,7 @@
             <TextView
                 android:id="@+id/txv_training_dairy_info"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_margin="5dp"
                 android:text="SS"
