--- a/app/src/main/res/layout/act_weather_main.xml
+++ b/app/src/main/res/layout/act_weather_main.xml
@@ -5,7 +5,7 @@
 
     <fragment
         android:id="@+id/choose_area_fragment"
-        android:name="com.rdx64.coolweather.android.ChooseAreaFragment"
+        android:name="com.yuqinyidev.android.azaz.weather.mvp.ui.fragment.ChooseAreaFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
