--- a/app/src/main/res/drawable/gallery_selector.xml
+++ b/app/src/main/res/drawable/gallery_selector.xml
@@ -14,7 +14,7 @@
 	<item android:state_focused="true">
 		<shape>
 			<gradient android:startColor="#eac100" />
-			<stroke android:width="2dp" android:color="#333333" color="#ffffff" />
+			<stroke android:width="2dp" android:color="#333333" />
 			<corners android:radius="8dp" />
 			<padding android:left="10dp" android:top="10dp"
 				android:bottom="10dp" android:right="10dp" />
