--- a/app/src/main/res/layout/kb_virual_dialog.xml
+++ b/app/src/main/res/layout/kb_virual_dialog.xml
@@ -1,31 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="300dp" android:layout_height="wrap_content"
-	android:orientation="vertical" android:layout_marginLeft="5dp"
-	android:layout_marginRight="5dp">
+    android:layout_width="300dp"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:orientation="vertical">
 
-	<EditText android:text="EditText" android:layout_weight="1.0"
-		android:singleLine="true" android:layout_width="290dp" android:id="@+id/edtInput"
-		android:layout_height="wrap_content" />
+    <EditText
+        android:id="@+id/edtInput"
+        android:layout_width="290dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.0"
+        android:singleLine="true"
+        android:text="EditText" />
 
-	<TextView android:id="@+id/txvSkip" android:text=""
-		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:gravity="center" />
+    <ToggleButton
+        android:id="@+id/toggleButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.0"
+        android:textOff="使用系统亮度"
+        android:textOn="不使用系统亮度" />
 
-	<SeekBar android:id="@+id/skbSkip" android:layout_width="290dp"
-		android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/txvSkip"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="" />
 
-	<LinearLayout android:layout_width="290dp"
-		android:layout_height="wrap_content" android:orientation="horizontal">
+    <SeekBar
+        android:id="@+id/skbSkip"
+        android:layout_width="290dp"
+        android:layout_height="wrap_content" />
 
-		<Button android:text="@string/sure" android:id="@+id/btnSure"
-			android:layout_weight="1.0" android:layout_width="fill_parent"
-			android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="290dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-		<Button android:text="@string/cancel" android:id="@+id/btnCancel"
-			android:layout_weight="1.0" android:layout_width="fill_parent"
-			android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/btnSure"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0"
+            android:text="@string/sure" />
 
-	</LinearLayout>
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0"
+            android:text="@string/cancel" />
+
+    </LinearLayout>
 
 </LinearLayout>
