--- a/app/src/main/res/layout/kb_book_mark_dialog.xml
+++ b/app/src/main/res/layout/kb_book_mark_dialog.xml
@@ -1,27 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout android:id="@+id/TableLayout01"
-	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<TableRow android:id="@+id/tre1" android:layout_width="fill_parent"
-		android:layout_height="fill_parent">
+    <TableRow
+        android:id="@+id/tre1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-		<EditText android:id="@+id/bmet" android:layout_width="fill_parent"
-			android:layout_height="wrap_content" android:layout_weight="1.0" />
+        <EditText
+            android:id="@+id/bmet"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0" />
 
-	</TableRow>
+    </TableRow>
 
-	<TableRow android:id="@+id/tre2" android:layout_width="fill_parent"
-		android:layout_height="fill_parent">
+    <TableRow
+        android:id="@+id/tre2"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
-		<Button android:id="@+id/bmsure" android:layout_width="150px"
-			android:layout_height="wrap_content" android:text="@string/sure"
-			android:layout_weight="1.0" />
+        <Button
+            android:id="@+id/bmsure"
+            android:layout_width="150px"
+            android:layout_height="wrap_content"
+            android:text="@string/sure"
+            android:layout_weight="1.0" />
 
-		<Button android:id="@+id/bmcancel" android:layout_width="150px"
-			android:layout_height="wrap_content" android:text="@string/cancel"
-			android:layout_weight="1.0" />
+        <Button
+            android:id="@+id/bmcancel"
+            android:layout_width="150px"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel"
+            android:layout_weight="1.0" />
 
-	</TableRow>
+    </TableRow>
 
 </TableLayout>
