--- a/app/src/main/res/layout/mr_event_header.xml
+++ b/app/src/main/res/layout/mr_event_header.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:layout_height="wrap_content"
-	android:background="@color/blue">
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/blue">
 
-	<TextView android:id="@+id/txvEventTitle"
-		android:layout_alignParentLeft="true" android:textStyle="bold"
-		android:textSize="25sp" android:layout_height="wrap_content"
-		android:layout_width="fill_parent" />
+    <TextView
+        android:id="@+id/txvEventTitle"
+        android:layout_alignParentLeft="true"
+        android:textStyle="bold"
+        android:textSize="25sp"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent" />
 
 </LinearLayout>
