--- a/app/src/main/res/layout/kb_book_mark_list.xml
+++ b/app/src/main/res/layout/kb_book_mark_list.xml
@@ -1,39 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:id="@+id/LinearLayout01"
-	android:layout_width="wrap_content" android:layout_height="wrap_content"
-	xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<ListView android:id="@+id/bookmarklistview"
-		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:layout_weight="1.0" />
+    <ListView
+        android:id="@+id/bookmarklistview"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.0" />
 
-	<TableLayout android:id="@+id/TableLayout01"
-		android:layout_width="wrap_content" android:layout_height="wrap_content">
+    <TableLayout
+        android:id="@+id/TableLayout01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-		<TableRow android:id="@+id/TableRow01" android:layout_width="wrap_content"
-			android:layout_height="wrap_content">
+        <TableRow
+            android:id="@+id/TableRow01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-			<Button android:id="@+id/deletebm" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:text="@string/delete" />
+            <Button
+                android:id="@+id/deletebm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/delete" />
 
-		</TableRow>
+        </TableRow>
 
-		<TableRow android:id="@+id/TableRow02" android:layout_width="wrap_content"
-			android:layout_height="wrap_content">
+        <TableRow
+            android:id="@+id/TableRow02"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-			<Button android:id="@+id/skipbm" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:text="@string/gomark" />
+            <Button
+                android:id="@+id/skipbm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/gomark" />
 
-		</TableRow>
+        </TableRow>
 
-		<TableRow android:id="@+id/TableRow03" android:layout_width="wrap_content"
-			android:layout_height="wrap_content">
+        <TableRow
+            android:id="@+id/TableRow03"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-			<Button android:id="@+id/cancelbm" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:text="@string/cancel" />
+            <Button
+                android:id="@+id/cancelbm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/cancel" />
 
-		</TableRow>
+        </TableRow>
 
-	</TableLayout>
+    </TableLayout>
 
 </LinearLayout>
