--- a/app/src/main/res/layout/kb_bookshelf.xml
+++ b/app/src/main/res/layout/kb_bookshelf.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
-	<!--<LinearLayout android:id="@+id/llayUpOneLevel"-->
-		<!--android:layout_width="fill_parent" android:layout_height="wrap_content">-->
+    <!--<LinearLayout android:id="@+id/llayUpOneLevel"-->
+    <!--android:layout_width="fill_parent" android:layout_height="wrap_content">-->
 
-		<!--<ImageView android:id="@+id/imgUpOneLevel" android:src="@drawable/icon"-->
-			<!--android:layout_width="wrap_content" android:layout_height="wrap_content" />-->
+    <!--<ImageView android:id="@+id/imgUpOneLevel" android:src="@drawable/icon"-->
+    <!--android:layout_width="wrap_content" android:layout_height="wrap_content" />-->
 
-		<!--<TextView android:id="@+id/txvUpOneLevel"-->
-			<!--android:layout_width="fill_parent" android:layout_height="wrap_content"-->
-			<!--android:text="hello" android:textSize="20sp" />-->
+    <!--<TextView android:id="@+id/txvUpOneLevel"-->
+    <!--android:layout_width="fill_parent" android:layout_height="wrap_content"-->
+    <!--android:text="hello" android:textSize="20sp" />-->
 
-	<!--</LinearLayout>-->
+    <!--</LinearLayout>-->
 
-	<TextView android:id="@+id/txvUpOneLevelBottom"
-		android:layout_width="fill_parent" android:layout_height="1dp"
-		android:text="" android:background="#FFFFFFFF" />
+    <TextView
+        android:id="@+id/txvUpOneLevelBottom"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:text=""
+        android:background="#FFFFFFFF" />
 
-	<ListView android:id="@+id/lsvBookShelf"
-		android:layout_height="fill_parent" android:layout_width="fill_parent"
-		android:fadingEdge="none" android:layout_weight="1"
-		android:background="#FFFFFFFF" />
+    <ListView
+        android:id="@+id/lsvBookShelf"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:fadingEdge="none"
+        android:layout_weight="1"
+        android:background="#FFFFFFFF" />
 
 </LinearLayout>
