--- a/app/src/main/res/layout/kb_main.xml
+++ b/app/src/main/res/layout/kb_main.xml
@@ -1,34 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/black"
+    android:orientation="vertical">
 
-	<TextView android:id="@+id/txvHello" android:text="hello"
-		android:textSize="20sp" android:layout_width="wrap_content"
-		android:layout_height="wrap_content" android:layout_alignParentTop="true"
-		android:layout_alignParentLeft="true" />
+    <TextView
+        android:id="@+id/txvHello"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="hello"
+        android:textSize="20sp" />
 
-	<TextView android:id="@+id/txvExit" android:text="@string/exit"
-		android:textSize="20sp" android:layout_width="wrap_content"
-		android:layout_height="wrap_content" android:layout_alignParentTop="true"
-		android:layout_alignParentRight="true" />
+    <TextView
+        android:id="@+id/txvExit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/exit"
+        android:textSize="20sp" />
 
-	<ImageView android:id="@+id/imgCover" android:layout_height="wrap_content"
-		android:layout_width="fill_parent" android:layout_above="@+id/glyHistory"
-		android:layout_centerHorizontal="true" />
+    <ImageView
+        android:id="@+id/imgCover"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/glyHistory"
+        android:layout_centerHorizontal="true" />
 
-	<Gallery android:id="@+id/glyHistory" android:layout_width="fill_parent"
-		android:layout_height="120dp" android:layout_centerInParent="true"
-		android:spacing="0dp" />
+    <Gallery
+        android:id="@+id/glyHistory"
+        android:layout_width="fill_parent"
+        android:layout_height="120dp"
+        android:layout_centerInParent="true"
+        android:spacing="0dp" />
 
-	<ImageView android:id="@+id/imgBookshelf" android:src="@drawable/bookshelf"
-		android:layout_height="wrap_content" android:layout_width="wrap_content"
-		android:layout_below="@+id/glyHistory"
-		android:layout_centerHorizontal="true" />
+    <ImageView
+        android:id="@+id/imgBookshelf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/glyHistory"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/bookshelf" />
 
-	<TextView android:id="@+id/txvCopyRight" android:text="@string/copyright"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:layout_alignParentBottom="true"
-		android:layout_centerHorizontal="true" />
+    <TextView
+        android:id="@+id/txvCopyRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/copyright" />
 
 </RelativeLayout>
