--- a/app/src/main/res/layout/mr_event_body.xml
+++ b/app/src/main/res/layout/mr_event_body.xml
@@ -1,87 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_height="wrap_content"
-	android:layout_width="fill_parent">
+    android:orientation="vertical"
+    android:layout_height="wrap_content"
+    android:layout_width="fill_parent">
 
-	<!-- Title line -->
-	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:orientation="horizontal">
+    <!-- Title line -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-		<TextView android:textSize="20sp" android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:text="@string/title" />
+        <TextView
+            android:textSize="20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title" />
 
-		<EditText android:id="@+id/edtEventTitle"
-			android:layout_height="wrap_content" android:layout_width="fill_parent"
-			android:layout_weight="1" android:layout_marginLeft="10dp" />
+        <EditText
+            android:id="@+id/edtEventTitle"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp" />
 
-	</LinearLayout>
+    </LinearLayout>
 
-	<!-- Time line -->
-	<RelativeLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
+    <!-- Time line -->
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
 
-		<TextView android:layout_height="wrap_content"
-			android:layout_width="wrap_content" android:text="@string/time"
-			android:textSize="20sp" android:layout_centerVertical="true"
-			android:layout_alignParentLeft="true" />
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/time"
+            android:textSize="20sp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true" />
 
-		<Button android:id="@+id/btnEventTime" android:layout_height="wrap_content"
-			android:layout_width="wrap_content" android:text="@string/timeFomat"
-			android:layout_centerVertical="true" android:layout_alignParentRight="true" />
+        <Button
+            android:id="@+id/btnEventTime"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/timeFomat"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true" />
 
-		<TextView android:id="@+id/txvEventDate" android:layout_height="wrap_content"
-			android:layout_width="wrap_content" android:text="@string/dateFomat"
-			android:layout_centerVertical="true" android:layout_centerInParent="true"
-			android:layout_marginRight="10dp" />
+        <TextView
+            android:id="@+id/txvEventDate"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/dateFomat"
+            android:layout_centerVertical="true"
+            android:layout_centerInParent="true"
+            android:layout_marginRight="10dp" />
 
-	</RelativeLayout>
+    </RelativeLayout>
 
-	<!-- Where line -->
-	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:orientation="horizontal">
+    <!-- Where line -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-		<TextView android:textSize="20sp" android:layout_height="wrap_content"
-			android:text="@string/where" android:layout_width="wrap_content" />
+        <TextView
+            android:textSize="20sp"
+            android:layout_height="wrap_content"
+            android:text="@string/where"
+            android:layout_width="wrap_content" />
 
-		<EditText android:id="@+id/edtEventWhere"
-			android:layout_height="wrap_content" android:layout_width="fill_parent"
-			android:layout_weight="1" android:layout_marginLeft="10dp" />
+        <EditText
+            android:id="@+id/edtEventWhere"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp" />
 
-	</LinearLayout>
+    </LinearLayout>
 
-	<!-- Status line -->
-	<TableRow android:layout_width="match_parent"
-		android:layout_height="wrap_content">
+    <!-- Status line -->
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-		<TextView android:textSize="20sp" android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:text="@string/status" />
+        <TextView
+            android:textSize="20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/status" />
 
-		<CheckBox android:id="@+id/chbEventImportant"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:layout_marginLeft="10dp" />
+        <CheckBox
+            android:id="@+id/chbEventImportant"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp" />
 
-		<TextView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:text="@string/important" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/important" />
 
-		<CheckBox android:id="@+id/chbEventCompleted"
-			android:layout_width="wrap_content" android:layout_height="wrap_content" />
+        <CheckBox
+            android:id="@+id/chbEventCompleted"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-		<TextView android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:text="@string/complete" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/complete" />
 
-	</TableRow>
+    </TableRow>
 
-	<!-- Memo line -->
-	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:orientation="horizontal">
+    <!-- Memo line -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-		<TextView android:textSize="20sp" android:layout_height="wrap_content"
-			android:text="@string/memo_" android:layout_width="wrap_content" />
+        <TextView
+            android:textSize="20sp"
+            android:layout_height="wrap_content"
+            android:text="@string/memo_"
+            android:layout_width="wrap_content" />
 
-		<EditText android:id="@+id/edtEventMemoContent"
-			android:layout_height="wrap_content" android:layout_width="fill_parent"
-			android:layout_weight="1" android:layout_marginLeft="10dp" />
+        <EditText
+            android:id="@+id/edtEventMemoContent"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp" />
 
-	</LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
