--- a/app/src/main/res/layout/mr_memolist.xml
+++ b/app/src/main/res/layout/mr_memolist.xml
@@ -1,25 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_width="fill_parent"
-	android:layout_height="fill_parent" android:background="@color/white">
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@color/white">
 
-	<TextView android:id="@+id/txvMListTitle"
-		android:layout_height="45dip" android:layout_width="fill_parent"
-		android:text="@string/memoList" android:textStyle="bold"
-		android:background="@color/blue" android:textSize="25sp" />
+    <TextView
+        android:id="@+id/txvMListTitle"
+        android:layout_height="45dip"
+        android:layout_width="fill_parent"
+        android:text="@string/memoList"
+        android:textStyle="bold"
+        android:background="@color/blue"
+        android:textSize="25sp" />
 
-	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="fill_parent" android:orientation="vertical"
-		android:layout_weight="1">
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:layout_weight="1">
 
-		<ListView android:id="@+id/lsvMListMemo"
-			android:layout_width="fill_parent" android:layout_height="fill_parent"
-			android:layout_below="@id/txvMListTitle" android:layout_weight="1" />
+        <ListView
+            android:id="@+id/lsvMListMemo"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_below="@id/txvMListTitle"
+            android:layout_weight="1" />
 
-		<Button android:id="@+id/btnMListCreate" android:layout_height="wrap_content"
-			android:layout_width="fill_parent" android:text="@string/newMemo"
-			android:textSize="20sp" android:layout_marginTop="10dip" />
+        <Button
+            android:id="@+id/btnMListCreate"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:text="@string/newMemo"
+            android:textSize="20sp"
+            android:layout_marginTop="10dip" />
 
-	</LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
