--- a/app/src/main/res/layout/mr_newevent.xml
+++ b/app/src/main/res/layout/mr_newevent.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_height="fill_parent"
-	android:layout_width="fill_parent" android:background="@color/white"
-	android:layout_marginLeft="2dp" android:layout_marginRight="2dp">
+    android:orientation="vertical"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    android:background="@color/white"
+    android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp">
 
-    <include android:id="@+id/eventHeader" layout="@layout/mr_event_header" />
-    <include android:id="@+id/eventBody" layout="@layout/mr_event_body" />
+    <include
+        android:id="@+id/eventHeader"
+        layout="@layout/mr_event_header" />
 
-	<Button android:id="@+id/btnEventCreate" android:layout_width="fill_parent"
-		android:layout_height="50dip" android:text="@string/create"
-		android:layout_gravity="center_vertical" />
+    <include
+        android:id="@+id/eventBody"
+        layout="@layout/mr_event_body" />
+
+    <Button
+        android:id="@+id/btnEventCreate"
+        android:layout_width="fill_parent"
+        android:layout_height="50dip"
+        android:text="@string/create"
+        android:layout_gravity="center_vertical" />
 
 </LinearLayout>
