--- a/app/src/main/res/layout/mr_optlistitemabt.xml
+++ b/app/src/main/res/layout/mr_optlistitemabt.xml
@@ -2,8 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-    <TextView android:textSize="20sp" android:text="@string/abt_option" android:id="@+id/textView1" android:layout_width="fill_parent" android:layout_height="35dip"></TextView>
-    <TextView android:textSize="10sp" android:text="@string/abt_dtl" android:id="@+id/textView2" android:layout_width="fill_parent" android:layout_height="25dip"></TextView>
-    </LinearLayout>
+    android:layout_height="fill_parent">
+
+    <TextView
+        android:textSize="20sp"
+        android:text="@string/abt_option"
+        android:id="@+id/textView1"
+        android:layout_width="fill_parent"
+        android:layout_height="35dip"></TextView>
+
+    <TextView
+        android:textSize="10sp"
+        android:text="@string/abt_dtl"
+        android:id="@+id/textView2"
+        android:layout_width="fill_parent"
+        android:layout_height="25dip"></TextView>
+</LinearLayout>
