--- a/app/src/main/res/layout/mr_updateevent.xml
+++ b/app/src/main/res/layout/mr_updateevent.xml
@@ -1,25 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_height="fill_parent"
-	android:layout_width="fill_parent" android:background="@color/white"
-	android:layout_marginLeft="2dp" android:layout_marginRight="2dp">
+    android:orientation="vertical"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    android:background="@color/white"
+    android:layout_marginLeft="2dp"
+    android:layout_marginRight="2dp">
 
-	<include android:id="@+id/eventHeader" layout="@layout/mr_event_header" />
-	<include android:id="@+id/eventBody" layout="@layout/mr_event_body" />
+    <include
+        android:id="@+id/eventHeader"
+        layout="@layout/mr_event_header" />
 
-	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content">
+    <include
+        android:id="@+id/eventBody"
+        layout="@layout/mr_event_body" />
 
-		<Button android:id="@+id/btnEventUpdate" android:layout_height="wrap_content"
-			android:layout_width="fill_parent" android:layout_weight="1"
-			android:textSize="20sp" android:text="@string/update"
-			android:layout_marginTop="10dip" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
 
-		<Button android:id="@+id/btnEventCancle" android:layout_height="wrap_content"
-			android:layout_width="fill_parent" android:layout_weight="1"
-			android:text="@string/cancle" android:textSize="20sp"
-			android:layout_marginTop="10dip" />
+        <Button
+            android:id="@+id/btnEventUpdate"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:text="@string/update"
+            android:layout_marginTop="10dip" />
 
-	</LinearLayout>
+        <Button
+            android:id="@+id/btnEventCancle"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_weight="1"
+            android:text="@string/cancle"
+            android:textSize="20sp"
+            android:layout_marginTop="10dip" />
+
+    </LinearLayout>
 
 </LinearLayout>
