--- a/app/src/main/res/menu/kb_menu_bookshelf.xml
+++ b/app/src/main/res/menu/kb_menu_bookshelf.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<item android:id="@+id/menu_bookshelf_refresh" android:title="@string/refresh"
-		android:icon="@drawable/icon" />
-	<item android:id="@+id/menu_bookshelf_addfolder" android:title="@string/addfolder"
-		android:icon="@drawable/icon" />
+    <item
+        android:id="@+id/menu_bookshelf_refresh"
+        android:icon="@drawable/fail"
+        android:title="@string/refresh" />
+    <item
+        android:id="@+id/menu_bookshelf_addfolder"
+        android:icon="@drawable/fail"
+        android:title="@string/addfolder" />
 
 </menu>
