--- a/app/src/main/res/menu/kb_menu_main.xml
+++ b/app/src/main/res/menu/kb_menu_main.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<item android:id="@+id/menu_main_setting" android:title="@string/setting"
-		android:icon="@drawable/icon" />
-	<item android:id="@+id/menu_main_about" android:title="@string/about"
-		android:icon="@drawable/icon" />
-	<item android:id="@+id/menu_main_exit" android:title="@string/exit"
-		android:icon="@drawable/icon" />
+    <item
+        android:id="@+id/menu_main_setting"
+        android:icon="@drawable/fail"
+        android:title="@string/setting" />
+    <item
+        android:id="@+id/menu_main_about"
+        android:icon="@drawable/fail"
+        android:title="@string/about" />
+    <item
+        android:id="@+id/menu_main_exit"
+        android:icon="@drawable/fail"
+        android:title="@string/exit" />
 
 </menu>
