--- a/app/src/main/res/menu/kb_menu_bookshelf.xml
+++ b/app/src/main/res/menu/kb_menu_bookshelf.xml
@@ -3,11 +3,11 @@
 
     <item
         android:id="@+id/menu_bookshelf_refresh"
-        android:icon="@drawable/fail"
+        android:icon="@drawable/refresh"
         android:title="@string/refresh" />
     <item
         android:id="@+id/menu_bookshelf_addfolder"
-        android:icon="@drawable/fail"
+        android:icon="@drawable/addfolder"
         android:title="@string/addfolder" />
 
 </menu>
