--- a/app/src/main/res/menu/kb_menu_main.xml
+++ b/app/src/main/res/menu/kb_menu_main.xml
@@ -3,15 +3,15 @@
 
     <item
         android:id="@+id/menu_main_setting"
-        android:icon="@drawable/fail"
+        android:icon="@drawable/settings"
         android:title="@string/setting" />
     <item
         android:id="@+id/menu_main_about"
-        android:icon="@drawable/fail"
+        android:icon="@drawable/about"
         android:title="@string/about" />
     <item
         android:id="@+id/menu_main_exit"
-        android:icon="@drawable/fail"
+        android:icon="@drawable/exit"
         android:title="@string/exit" />
 
 </menu>
