调整显示前

--- a/app/src/main/res/layout/kb_reader.xml
+++ b/app/src/main/res/layout/kb_reader.xml
@@ -21,7 +21,11 @@
             <TextView
                 android:id="@+id/textContent"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginRight="6dp"
+                android:layout_marginTop="15dp" />
 
         </ScrollView>
 
