--- a/app/src/main/res/layout/kb_reader.xml
+++ b/app/src/main/res/layout/kb_reader.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/llayContent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -37,11 +38,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <!--app:textSize="12"-->
         <com.yuqinyidev.android.azaz.kanbook.mvp.ui.customviews.KBTextProgressBar
             android:id="@+id/tpbPercent"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
-            android:layout_height="10dp"
+            android:layout_height="10px"
             android:max="1000"
             android:progressDrawable="@drawable/progressbar_normal" />
 
